<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>ai.qxotic</groupId>
        <artifactId>qxotic-parent</artifactId>
        <version>0.1-SNAPSHOT</version>
<!--        <version>${qxotic.version}</version>-->
    </parent>

    <artifactId>examples</artifactId>
    <name>Jota Examples</name>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>ai.qxotic</groupId>
            <artifactId>jota-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>ai.qxotic</groupId>
            <artifactId>jota-runtime-c</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>ai.qxotic</groupId>
            <artifactId>jota-runtime-hip</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>ai.qxotic</groupId>
            <artifactId>gguf</artifactId>
        </dependency>
        <dependency>
            <groupId>ai.qxotic</groupId>
            <artifactId>tokenizers</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>jdk.incubator.vector</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>ai.qxotic.jota.examples.mnist.MnistDemoServer</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
